--- a/static/main.css
+++ b/static/main.css
@@ -1,13 +1,25 @@
 * {
-    margin: 0;
-    padding: 0;
     font-family: sans-serif;
+    text-align: center;
 }
 
 body {
     background: #eeeeee;
+   
 }
 
 .shadow {
+    margin-top: 20px;
+    margin-left: 5px;
+    margin-right: 40px;
+    margin-bottom: 20px;
     box-shadow: 0px 2px 5px 2px darkgrey;
+}
+
+.nav-link {
+
+    margin-right:90%;
+}
+.navbar shadow {
+    margin-right: 40%;
 }
