--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,10 @@
 <body>
     <h1 class="shadow">Titel der Webseite</h1>
     <ul class="navbar shadow">
-        <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="/">Home</a>
         </li>
     </ul>
-    <div id="content">
+    <div id="content"></div>
     {% block content %}
     {% endblock %}
     </div>
