--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 * {
     font-family: sans-serif;
-    text-align: center;
+  
 }
 
 body {
@@ -14,12 +14,22 @@ body {
     margin-right: 40px;
     margin-bottom: 20px;
     box-shadow: 0px 2px 5px 2px darkgrey;
+    text-align: center;
 }
 
 .nav-link {
-
+    padding-right: 90%;
     margin-right:90%;
 }
-.navbar shadow {
-    margin-right: 40%;
-}
+ 
+
+
+<div id="content">
+    
+    <h2>Willkommen!</h2>
+    <p>Herzlich willkommen auf dieser super Webseite</p>
+    <p>Klicken Sie <a href="/">hier</a> um zur Startseite zu kommen.</p>
+
+        text-align: left;
+
+    </div>
